NT Moved dist to dist/assets; Added gulp-react

--- a/ui/webapp/app/index.jade
+++ b/ui/webapp/app/index.jade
@@ -15,7 +15,7 @@ html(lang="en" ng-app="gemStore")
     // endbuild
   body(ng-controller="StoreController as store")
     header
-      h1.text-center Flatlander Crafted Gems 23
+      h1.text-center Flatlander Crafted Gems
       h2.text-center – an Angular store –
     div.list-group
       div.list-group-item(ng-repeat="product in store.products")
