--- a/ui/webapp/app/css/style.styl
+++ b/ui/webapp/app/css/style.styl
@@ -2,7 +2,7 @@ border-radius()
   border-radius arguments
 
 body
-  font 12px Helvetica, Arial, sans-serif
+  font 1em Helvetica, Arial, sans-serif
   background-color white
 
 a.button
