--- a/ui/webapp/app/react.jade
+++ b/ui/webapp/app/react.jade
@@ -3,6 +3,7 @@ html(lang="en")
    head
       meta(charset='utf-8')
       meta(name='viewport' content='width=device-width, initial-scale=1')
+      link(rel='stylesheet' type='text/css' href='css/react.css')
       script(type='text/javascript' src="http://fb.me/react-0.13.1.js")
    body
       div#start
