NT Added immutable and react to bower; Updated bower; Learning react.js

--- a/ui/webapp/app/react.jade
+++ b/ui/webapp/app/react.jade
@@ -1,10 +1,11 @@
 doctype html
-html(lang="en")
+html(lang='en')
    head
       meta(charset='utf-8')
       meta(name='viewport' content='width=device-width, initial-scale=1')
       link(rel='stylesheet' type='text/css' href='css/react.css')
-      script(type='text/javascript' src="http://fb.me/react-0.13.1.js")
    body
       div#start
-      script(type='text/javascript' src="js/react.js")
+      script(type='text/javascript' src='bower_components/react/react.js')
+      script(type='text/javascript' src='bower_components/immutable/dist/immutable.js')
+      script(type='text/javascript' src='js/react.js')
